prover-ray/zkcdriver/testdata/synced/invalid/break_01.zkc
//error:4:3-8:break outside loop
fn f(x:u8) -> (r:u8) {
  r = 0
  break
  return
}
